# 8005-a1-pt-benchmarker

./: .gitignore  CMakeLists.txt  README.md
common/: PrimeDecomposer.cpp  PrimeDecomposer.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  logger.cpp  logger.h
docs/: .~lock.DesignDocument.odt#  A1Report.odt  ChartData.ods  DataFlowDiagram.odg  DesignDocument.odt  TestDoc.ods  Thread - DataFlowDiagram.odg  diagrams.zargo  diagrams.zargo~
docs/dataflow/: DataFlowDiagram-Process.odg
examples/: prime.tar  primedec.c  primedecompose.c
processes/: WorkerProcess.cpp  WorkerProcess.h  pmain.cpp
threads/: WorkerThread.cpp  WorkerThread.h  tmain.cpp
